@@ -295,4 +295,44 @@ class UserTest extends MediaWikiTestCase {
 		$this->assertFalse( $user->checkPasswordValidity( 'Passpass' )->isGood() );
 		$this->assertEquals( 'password-login-forbidden', $user->getPasswordValidity( 'Passpass' ) );
 	}
+
+	/**
+	 * Test getting remote groups.
+	 * @covers User::getRemoteGroupDataFromResponse
+	 */
+	public function testGetRemoteGroupDataFromResponse() {
+		$class = new ReflectionClass( 'User' );
+		$method = $class->getMethod( 'getRemoteGroupDataFromResponse' );
+		$method->setAccessible( true );
+		$this->assertEquals(
+			array( 'sysop' ),
+			$method->invokeArgs( null, array( array(
+				'query' => array( 'usergroups' => array(
+					array( 'name' => 'sysop', 'implicit' => false ),
+					array( 'name' => 'autoconfirmed', 'implicit' => true ),
+				) )
+			) ) )
+		);
+
+		$this->assertEquals(
+			array( 'sysop' ),
+			$method->invokeArgs( null, array( array(
+				'query' => array( 'usergroups' => array(
+					array( 'name' => 'sysop' ),
+					array( 'name' => 'autoconfirmed' ),
+				) )
+			) ) )
+		);
+
+		$this->assertEquals(
+			array( 'sysop', 'bureaucrat' ),
+			$method->invokeArgs( null, array( array(
+				'query' => array( 'usergroups' => array(
+					array( 'name' => 'sysop' ),
+					array( 'name' => 'autoconfirmed' ),
+					array( 'name' => 'bureaucrat' ),
+				) )
+			) ) )
+		);
+	}
 }
